@@ -13,6 +13,8 @@
           (Gavin Henry, Tatsuhiko Miyagawa)
         - Fixed bug where req->base and req->uri would include a port number when running
           in SSL mode.
+        - Removed unnecessary sprintf in debug mode that caused warnings on locales where
+          commas are used for decimal markers.
 
 5.7010  2007-08-22 07:41:00
         - Resource forks in 5.7009
